kubernates/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: inception_service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: inception_service
          servicePort: 8000
